Add display items functionality
